<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="AreaNum" Id="{f177d6d2-9ee1-4d87-b139-da8c6ff1f72f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
//{attribute 'strict'}
{attribute 'to_string'}
TYPE AreaNum :
(
	NULL_AREA,
	
	AREA_1,
	AREA_2,
	AREA_3,
	AREA_4,
	AREA_5,
	AREA_6
	
);
END_TYPE
(*
when generating AdsMessage types, use TO_STRING to convert these enums to a recipient string
*)]]></Declaration>
  </DUT>
</TcPlcObject>